# vault-cat

./: build.sh  index.html  install.sh  package.json  pnpm-lock.yaml  vite.config.ts
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  vault.rs
src/components/: auth-view.tsx  main-sidebar.tsx  navbar.tsx  settings-view.tsx  sub-sidebar.tsx  vault-layout.tsx  vault-view.tsx  workspace-select-view.tsx
src/routes/: index.tsx
src/stores/: app.ts  settings.ts  sidebar.ts  theme.ts  vault-data.ts  workspace.ts
