[package]
name = "vault-cat"
version = "0.1.0"
description = "Vault Cat - Secure Credentials Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "vault_cat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = { version = "1", features = ["std", "zeroize_derive"] }
dirs = "5"
rand_core = { version = "0.6", features = ["std"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
